<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_grey_2dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/city_of_toronto_population_2016_census_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/gtapopulation"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gta_population"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/city_of_toronto_covid_19_cases_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/numberofcasesallgta"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/population_text"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/population_of_postal_code"
                android:textAlignment="textEnd"
                />

            <TextView
                android:id="@+id/population_value"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numberofcases_text"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/number_of_cases_in_postal_code"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/numberofcases_value"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/date_of_earliest_case_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/dateoffirstcase"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/date_of_most_recent_case_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/dateoflastcase"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/date_with_the_most_cases_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/datemostcases"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/hospitalizations_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/hospitalizations"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/deaths_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/deaths"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/source_of_infection_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/sourceofinfection"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/gender_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/gender"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/age_group_colon"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/agegroup"
                style="@style/text_style_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlCompat"
                tools:text="333" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>